Bugfix: Corrected endpoint URL in SPARQL query editor. Bugfix: Fixed back button in SPARQL query editor. Bugfix: Added scrollbar to SPARQL query editor. Bugfix: Changed ORCiD endpoint URL to production system. Enabled calendar in dashboard using keyboard shortcut. Changed keyboard shortcut key from alt to ctrl.

--- a/Artivity.Apid.Modules.Journal/app/css/style.scss
+++ b/Artivity.Apid.Modules.Journal/app/css/style.scss
@@ -1770,6 +1770,16 @@ path.color1 {
 
 /* YASGUI */
 
+#editor {
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	overflow-y: scroll;
+	overflow-x: hidden;
+}
+
 .yasgui {
 	background: none;
 	font-family: 'Roboto';
@@ -1801,6 +1811,7 @@ path.color1 {
 
 .yasgui .tab-content {
 	padding: 0;
+	position: relative;
 }
 
 .yasgui .CodeMirror {
